[package]
name = "roulette"
version = "0.1.0"
edition = "2021"
description = "HTTP service that redirects to random images"
license = "MIT"
repository = "https://github.com/shantanuraj/roulette"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["trace"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
